[package]
name = "dyn-wall-rs"
version = "2.1.2"
authors = ["RAR27 <rehanalirana@tuta.io>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Helps user set a dynamic wallpaper and lockscreen. For more info and help, go to https://github.com/RAR27/dyn-wall-rs"
repository = "https://github.com/RAR27/dyn-wall-rs"
readme = "README.md"
keywords = ["dynamic", "wallpaper"]
categories = ["command-line-utilities"]
exclude = [ 
    "demo.gif"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clokwerk = "0.3.0"
walkdir = "2"
alphanumeric-sort = "1.0.13"
run_script = "0.6.3"
unicase = "2.6.0"
winapi = { version = "0.3.8", features = ["winuser"] }
structopt = "0.3.15"
clap = "2.33.1"
serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5"
sun-times = "0.1.2"
dirs-next = "1.0.1"
