[package]
name = "dyn-wall-rs"
version = "2.1.3"
authors = ["RAR27 <rehanalirana@tuta.io>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Helps user set a dynamic wallpaper and lockscreen. For more info and help, go to https://github.com/RAR27/dyn-wall-rs"
repository = "https://github.com/RAR27/dyn-wall-rs"
readme = "README.md"
keywords = ["dynamic", "wallpaper"]
categories = ["command-line-utilities"]
exclude = [ 
    "demo.gif"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clokwerk = "0.3.5"
walkdir = "2.3.2"
alphanumeric-sort = "1.4.4"
run_script = "0.8.0"
unicase = "2.6.0"
winapi = { version = "0.3.9", features = ["winuser"] }
structopt = "0.3.26"
clap = "2.34.0"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.5.11"
sun-times = "0.1.2"
dirs-next = "2.0.0"
rand = "0.8.5"
